Fix horizontal alignment for `.image-wrapped`

--- a/mixins/image-wrapped.less
+++ b/mixins/image-wrapped.less
@@ -55,6 +55,10 @@
 	.image-wrapped {
 		width: 100%;
 
+		.image-responsive {
+			margin: auto;
+		}
+
 		&.image-inline {
 			display: inline-block;
 			vertical-align: middle;
